Deutsch Algorithm: Quantum Parallelism in Action

--- a/Deutsch_Jozsa_Algorithm.ipynb
+++ b/Deutsch_Jozsa_Algorithm.ipynb
@@ -1390,7 +1390,7 @@
         "id": "dlkRxXGu05VA"
       },
       "source": [
-        "As we can see, the most likely result is 1111. The other results are due to errors in the quantum computation"
+        "As we can see, the most likely result is 1111. The other results are due to errors in quantum computation"
       ]
     }
   ],
